# NoSQL_hw8

./: README.md  pyproject.toml
hw_8_1/: find_quote.py  models.py
hw_8_2/: consumer.py  consumer_email_2.py  consumer_sms_2.py  models.py  producer.py  producer_2.py
